# Pictou

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  shell.nix  test.compose.yml
.github/workflows/: backend.yml  global.yml  mirror.yml
back/: .env.example  .gitignore  Cargo.toml  test.env
back/image-classifier/: .gitignore  configure.sh  image_classifier.py  requirements.txt
back/migrations/2024-03-12-110328_database_v1/: down.sql  up.sql
back/migrations/2024-03-13-232850_add_auth_token_expiry/: down.sql  up.sql
back/migrations/2024-03-20-214526_add_image_mime_type/: down.sql  up.sql
back/migrations/2024-03-20-214526_add_image_upload_support/: down.sql  up.sql
back/migrations/2024-03-25-103254_add_created_at_updated_at/: down.sql  up.sql
back/migrations/2024-03-25-125122_add_image_caption/: down.sql  up.sql
back/migrations/2024-03-25-140421_fix_fk_user_images_album_images/: down.sql  up.sql
back/migrations/2024-03-26-125932_add_user_cascading/: down.sql  up.sql
back/migrations/20240305_AddUsersTable/: down.sql  up.sql
back/src/: config.rs  database.rs  db.rs  error.rs  error_handler.rs  image.rs  image_classifier.rs  lib.rs  log.rs  main.rs  openapi.rs  schema.rs  seed.rs  thumbnail.rs
back/src/api/: albums.rs  images.rs  mod.rs  users.rs
back/src/auth/: error.rs  google.rs  mod.rs  oauth2_client.rs  routes.rs
back/src/classifier/: mod.rs  python.rs  stub.rs
back/src/database/: mod.rs  testing.rs
back/src/image/: jxl.rs  mod.rs
back/src/storage/: local.rs  mod.rs
back/tests/: integration.rs
docs/: diagram-database.uml
front/: .gitignore  pubspec.yaml
front/.fvm/: flutter_sdk
front/android/app/src/main/: AndroidManifest.xml
front/api/: README.md  pubspec.yaml
front/api/.openapi-generator/: FILES
front/api/doc/: Album.md  AlbumList.md  AlbumPost.md  AlbumsApi.md  ApiError.md  ApiErrorCode.md  AuthApi.md  AuthError.md  AuthErrorKind.md  AuthenticationResponse.md  ImageMetaData.md  ImagePatch.md  ImageQuality.md  ImageUploadResponse.md  ImagesApi.md  ImagesMetaData.md  PersistedUserInfo.md  RefreshTokenParams.md  User.md  UserList.md  UserPost.md  UsersApi.md
front/api/lib/: pictou_api.dart  pictouapi.dart
front/api/lib/src/: api.dart  date_serializer.dart  serializers.dart  serializers.g.dart
front/api/lib/src/api/: albums_api.dart  auth_api.dart  images_api.dart  users_api.dart
front/api/lib/src/auth/: api_key_auth.dart  basic_auth.dart  bearer_auth.dart  oauth.dart
front/api/test/: album_list_test.dart  album_post_test.dart  album_test.dart  albums_api_test.dart  api_error_code_test.dart  api_error_test.dart  auth_api_test.dart  auth_error_kind_test.dart  auth_error_test.dart  authentication_response_test.dart  image_meta_data_test.dart  image_patch_test.dart  image_quality_test.dart  image_upload_response_test.dart  images_api_test.dart  images_meta_data_test.dart  persisted_user_info_test.dart  refresh_token_params_test.dart  user_list_test.dart  user_post_test.dart  user_test.dart  users_api_test.dart
front/ios/Runner/: Info.plist
front/ios/Runner.xcodeproj/: project.pbxproj
front/lib/: main.dart
front/lib/api/: openapi.json
front/lib/core/config/: albumprovider.dart  imagesprovider.dart  themeprovider.dart  userprovider.dart
front/linux/: CMakeLists.txt  my_application.cc
front/macos/Runner.xcodeproj/: project.pbxproj
front/test/: widget_test.dart
front/web/: index.html  manifest.json
front/windows/: CMakeLists.txt
front_t_dev_800/: .gitignore  README.md  pubspec.yaml
front_t_dev_800/android/app/: build.gradle
front_t_dev_800/ios/Runner/: Info.plist
front_t_dev_800/ios/Runner.xcodeproj/: project.pbxproj
front_t_dev_800/lib/: main.dart
front_t_dev_800/lib/core/config/: albumprovider.dart
front_t_dev_800/macos/Runner/Configs/: AppInfo.xcconfig
front_t_dev_800/test/: widget_test.dart
front_t_dev_800/windows/runner/: Runner.rc  main.cpp
(+83 files in other folders)
