[package]
name = "picto-back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio-postgres = "0.7"
dotenv = "0.15.0"
tokio = "1.36.0"
tracing = "~0.1.40"
tracing-actix-web = "~0.7.9"
tracing-appender = "0.2.3"
tracing-futures = "~0.2.5"
tracing-subscriber = { version = "~0.3.18", features = ["fmt", "env-filter", "ansi", "time"] }
