[package]
name = "picto-back"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"

[features]
default = ["testing-incompatible"]
testing-incompatible = ["python-classifier"]
python-classifier = ["pyo3"]

[dependencies]
actix-web = { version = "^4.5.1", default-features = false, features = ["macros", "compress-gzip", "compress-zstd", "cookies", "http2"] }
dotenv = "~0.15.0"
tokio = "^1.36.0"
tokio-util = "~0.7.10"
tracing = "~0.1.40"
tracing-actix-web = "~0.7.10"
tracing-appender = "~0.2.3"
tracing-futures = "~0.2.5"
tracing-subscriber = { version = "~0.3.18", features = [
    "fmt",
    "env-filter",
    "ansi",
    "time",
    "registry",
] }
oauth2 = "^4.4.2"
anyhow = "^1.0.81"
actix-session = { version = "~0.9.0", features = ["cookie-session"] }
serde = { version = "~1.0.197", features = ["derive"] }
serde_json = "^1"
diesel = { version = "^2.1.4", features = ["postgres", "r2d2", "time", "uuid"] }
diesel-derive-enum = { version = "^2.1.0", features = ["postgres"] }
r2d2 = "~0.8.10"
uuid = { version = "^1.7.0", features = ["serde", "v4"] }
jsonwebtoken = "^9.2.0"
futures-util = "~0.3.30"
urlencoding = "^2.1.3"
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
utoipa_auto_discovery = "~0.3.0"
actix-multipart = "~0.6.1"
display_json = "~0.2.1"
futures = "~0.3.30"
mime = "~0.3.17"
rand = "~0.8.5"
base64 = "~0.21.7"
time = { version = "~0.3.34", features = ["serde-human-readable"] }
reqwest = { version = "~0.11.26", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "deflate",
] }
url = { version = "~2.5.0", features = ["serde"] }
async-trait = "~0.1.78"
pin-project = "^1.1.5"
image-backend = { version = "~0.25.1", package = "image", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
] }
md-5 = "^0.10.6"
fake = "^2.9.2"
jpegxl-rs = { version = "~0.10.2", features = ["image", "vendored"] }
pyo3 = { version = "~0.21.1", features = ["auto-initialize"], optional = true }


[patch.crates-io]
jpegxl-rs  = { git = 'https://github.com/MisterPeModder/jpegxl-rs.git' }

[dev-dependencies]
actix-rt = "^2.9.0"
tempfile = "^3.10.1"
tracing-test = "~0.2.4"
